containers/kubernetes/api/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: api
    namespace: nrocinu
spec:
    selector:
        app: api
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: http
